fix alphabetical id bug

--- a/pytorchgui/viewer.html
+++ b/pytorchgui/viewer.html
@@ -33,7 +33,7 @@
                     nodes: [].concat(_toConsumableArray(data.nodes), [{
                         id: key,
                         group: json[key].type,
-                        label: (json[key].subtype == 'Threshold' ? 'ReLU' : json[key].subtype) + (json[key].type == 'Parameter' ? ' (' + json[key].shape.join(', ') + ')' : '')
+                        label: key + ' - ' + (json[key].subtype == 'Threshold' ? 'ReLU' : json[key].subtype) + (json[key].type == 'Parameter' ? ' (' + json[key].shape.join(', ') + ')' : '')
                     }]),
                     edges: json[key].type == 'Parameter' ? data.edges : [].concat(_toConsumableArray(data.edges), _toConsumableArray(json[key].dependencies.map(function (dep) {
                         return { from: dep, to: key };
@@ -44,7 +44,12 @@
             new vis.Network(document.getElementById('mynetwork'), {
                 nodes: new vis.DataSet(data.nodes),
                 edges: new vis.DataSet(data.edges)
-            }, { autoResize: true, height: window.innerHeight });
+            }, {
+                    autoResize: true,
+                    height: window.innerHeight,
+                    edges: { arrows: 'to' }
+                }
+            );
         }).catch(function (e) {
             return console.error("Something went wrong...", e);
         });
